# zfsd

./: .gitignore  Makefile.am  README.md  configure.ac
ext/: Makefile.am
ext/libphenom/: configure.ac
ext/libphenom/include/phenom/: defs.h
m4/: ck.m4  flags.m4
scripts/: import-dependencies  import-phenom  install-builddeps  make-forwarding-header  make-null-header  merge-openzfs  mkheader  mksource
src/: Makefile.am
src/cmd/zfsd/: Makefile.inc  init.c  init.h  zfsd.cc
src/fs/: Makefile.inc
src/fs/compat/: dprintf.c  spa_config.c  stubs.c  vdev_file.c  zfs_acl.c
src/fs/zfs/: arc.c  dbuf.c  dmu.c  dmu_send.c  dmu_tx.c  dsl_destroy.c  dsl_pool.c  dsl_userhold.c  sha256.c  spa.c  spa_config.c  spa_history.c  zfs_byteswap.c  zfs_onexit.c  zfs_vfsops.c  zio.c
src/fs/zfs/sys/: spa.h  vdev_impl.h  zfs_context.h  zfs_debug.h  zfs_ioctl.h  zvol.h
src/include/sys/: acl.h  atomic.h  attr.h  avl.h  avl_impl.h  bitmap.h  bootprops.h  buf.h  byteorder.h  callb.h  callo.h  class.h  cmn_err.h  compress.h  conf.h  cpupart.h  cpuvar.h  cred.h  ctype.h  cyclic.h  ddi.h  debug.h  dirent.h  disp.h  dkio.h  dnlc.h  door.h  edonr.h  feature_tests.h  file.h  idmap.h  int_limits.h  inttypes.h  isa_defs.h  kidmap.h  kmem.h  kobj.h  kstat.h  list.h  list_impl.h  (+43 more)
src/include/sys/fm/: protocol.h  util.h
src/include/sys/fs/: swapnode.h
src/include/sys/sysevent/: dev.h  eventdefs.h
src/include/util/: qsort.h  sscanf.h
src/include/vm/: anon.h  seg_enum.h  seg_kmem.h
src/lib/libnvpair/: Makefile.inc  libnvpair.c
src/lib/libskein/: Makefile.inc
src/lib/libspl/: Makefile.inc  callb.c  condvar.c  copy.c  cred.c  cyclic.c  debug.c  fm.c  kmem.c  kstat.c  move.c  mutex.c  nvpair.c  policy.c  random.c  rwlock.c  string.c  taskq.c  thread.c  u8_textprep.c  zmod.c
src/lib/libspl/spl/: atomic.h  byteorder.h  cmn_err.h  condvar.h  copy.h  cred.h  cyclic.h  ddi.h  debug.h  dkio.h  door.h  file.h  fm.h  kmem.h  kstat.h  mutex.h  nvpair.h  pathname.h  policy.h  random.h  rwlock.h  sdt.h  string.h  sysevent.h  sysmacros.h  taskq.h  taskq_impl.h  thread.h  time.h  types.h  uio.h  vfs.h  vnode.h  zmod.h  zone.h
src/tests/: Makefile.inc  link.cc  main.cc  spa.cc  spl.cc
